--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
@@ -10,6 +10,7 @@
 		<li><a href="/nts.uk.com.web/view/sample/catalog.xhtml">Setup a page test</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/catalog/required-files.xhtml">Create required files</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/ovdtocode/controls.xhtml"><span class="label label-new"/>Control List</a></li>
+		<li><a href="/nts.uk.com.web/view/sample/uibox/index.xhtml">UI Box</a></li>
 	</ul>
 	<h1>Implement Rules</h1>
 	<ul>
