--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
@@ -83,8 +83,8 @@
         <div class="mb-2">
             <button class="btn btn-primary btn-lg btn-block" v-click:500="changePass">{{ 'CCGS07_38' | i18n }}</button>
         </div>
-        <div class="mb-2" v-if="params.spanDays > 0">
+        <!--<div class="mb-2" v-if="params.spanDays > 0">
             <button class="btn btn-secondary btn-block" v-click:500="loginOnly">{{ 'CCGS07_39' | i18n }}</button>
-        </div>
+        </div>-->
     </fieldset>
 </div>
