Add autoResize description

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/fixedtable/fixed-table.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/fixedtable/fixed-table.xhtml
@@ -186,6 +186,14 @@ $("#fixed-table").ntsFixedTable({ height: 300, width: 600 });
 																		Set height for fixed table
 																	</td>
 																</tr>
+																<tr>
+																	<td>autoResize<br/><i>(optional)</i></td>
+																	<td>
+																		<b>Type:</b> boolean <br/>
+																		<b>Default:</b> "false"<br/>
+																		Auto resize fixed table
+																	</td>
+																</tr>
 															</tbody>
 														</table>
 													</div>
