CCG001 update sample

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -529,8 +529,8 @@ export interface Ccg001ReturnedData {
 											<td><b>Type:</b> string(ISO 8601 Formats)<br /> Period start date</td>
 										</tr>
 										<tr>
-											<td>workplaceId</td>
-											<td><b>Type:</b> string<br /> Workplace Id</td>
+											<td>affiliationId</td>
+											<td><b>Type:</b> string<br /> Workplace/Department Id</td>
 										</tr>
 										<tr>
 											<td>periodEnd</td>
@@ -538,7 +538,7 @@ export interface Ccg001ReturnedData {
 										</tr>
 										<tr>
 											<td>listEmployee</td>
-											<td><b>Type:</b> Array&lt;EmployeeDto&gt;<br /> List employee dto</td>
+											<td><b>Type:</b> Array&lt;EmployeeSearchDto&gt;<br /> List employee dto</td>
 										</tr>
 									</tbody>
 								</table>
