fix bug #107703 ver2

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/cps006.b.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/cps006.b.style.css
@@ -23,7 +23,6 @@
 .line_col_2_sel {
 	width: 350px;
 	float: left;
-	margin-left: 30px;
 }
 
 #content-left {
@@ -69,6 +68,9 @@
 	margin-left: 130px !important;
 }
 
+#B2_44{
+	margin-left: -95px;
+}
 .currency:after {
 	content: '¥';
 }
