--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/index.xhtml
@@ -353,13 +353,13 @@
 													data-bind="ntsFormLabel: { required: true , constraint: ['SelectionItemName']}">#{i18n.getText('CPS006_43')}</div>
 											</div>
 
-											<button id="B2_44" tabindex = "10" data-bind="click: settingSelection">#{i18n.getText('CPS006_44')}</button>
-											
 											<div class="line_col_2_sel">
-												<span id="B2_43"
+												<span id="B2_43" class="limited-label"
 													data-bind="text: currentItem().selectionItemName"></span>
 											</div>
-
+											
+											<button id="B2_44" tabindex = "10" data-bind="click: settingSelection">#{i18n.getText('CPS006_44')}</button>
+	
 										</div>
 										<div class="div_line">
 											<table class="contents-header">
