JHC002 ThanhPV Update code Server

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/jhc002.a.style.css
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/jhc002.a.style.css
@@ -1,3 +1,5 @@
 .container.cf{padding-left: 140px;}
-.rightTable tr td{width: 130px; height: 36px;}
+.rightTable tr td{width: 160px; height: 36px;}
 .contentTable{display: flex; margin-top: 20px;}
+.rightTable tr td span{float: left; margin: 4px;}
+.rightTable tr td .small{float: right; margin-right: 5px;}
