--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
@@ -14,32 +14,13 @@
 }
 
 .infinity-picker {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: 9901;
-  font-size: 16px;
+  padding: 0;
   text-align: center;
-  font-family: arial, verdana, sans-serif;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
   -webkit-font-smoothing: antialiased;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  &.centered {
-    left: unset;
-    bottom: unset;
-    width: calc(100% - 30px);
-    border: 1px solid #d9d4d4;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
-    &.plugin {
-      left: 15px;
-      top: calc(50vh - 130px);
-    }
-  }
   .ipkr-header {
     padding: 0 0.5em;
     min-height: 2em;
