update for http://192.168.50.4:3000/issues/107838

--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
@@ -1,7 +1,7 @@
 <div id="reset-pass">
         <div class="text-center page-title">{{ 'CCGS07_18' | i18n }}</div>
         <div class="text-left page-info alert-light alert">
-            <div>{{ 'CCGS07_18' | i18n(userName) }}</div>
+            <div>{{ 'CCGS07_9' | i18n(model.userName) }}</div>
             <div>{{ 'CCGS07_19' | i18n }}</div>
         </div>
         <fieldset class="login-form">
