--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
@@ -7,7 +7,7 @@
                     id="companyCode"
                     data-dependency="employeeCode"
                     name='CCG007_7'
-                    v-bind:tab-index='1'
+                    v-bind:tabindex='1'
                     v-model="model.comp"
                     v-bind:inline-title="true"
                     v-bind:disabled="false"
@@ -21,7 +21,7 @@
                 
                 <nts-text-editor
                     name='CCGS07_2'
-                    v-bind:tab-index='2'
+                    v-bind:tabindex='2'
                     v-model="model.employeeCode"
                     v-bind:show-constraint="false"
                     v-bind:inline-title="true"
@@ -34,7 +34,7 @@
                     <nts-input-password
                         id="password"
                         name='CCGS07_3'
-                        v-bind:tab-index='3'
+                        v-bind:tabindex='3'
                         v-model="model.password"
                         v-bind:show-constraint="false"
                         v-bind:inline-title="true"
