--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
@@ -9,86 +9,217 @@
 		<ui:define name="htmlHead">
 			<com:scriptfile set="IGNITE" />
 			<com:ValidatorScript>
-					nts.uk.shr.com.primitive.PersonId
+					nts.uk.shr.com.primitive.sample.SampleTimeClock
+					nts.uk.shr.com.primitive.sample.ProcessingNo
 				</com:ValidatorScript>
-			<com:stylefile path="cas013.a.style.css" />
-			<com:scriptfile path="cas013.a.vm.js" />
-			<com:scriptfile path="cas013.a.service.js" />
-			<com:scriptfile path="cas013.a.start.js" />
+			<com:stylefile path="jhc002.b.style.css" />
+			<com:scriptfile path="jhc002.b.vm.js" />
+			<com:scriptfile path="jhc002.b.service.js" />
+			<com:scriptfile path="jhc002.b.start.js" />
 		</ui:define>
 
 		<ui:define name="content">
 			<div id="functions-area">
-				<button tabindex="1" data-bind="click: New, enable: listRole().length > 0">#{i18n.getText('CAS013_4')}</button>
-				<button class="proceed" tabindex="2"
-					data-bind="click: save, enable: $root.errors.isEmpty() &amp;&amp; listRole().length > 0">#{i18n.getText('CAS013_5')}</button>
-				<button class="danger" tabindex="3"
-					data-bind="click: Delete, enable: isDelete() &amp;&amp; $root.errors.isEmpty">#{i18n.getText('CAS013_6')}</button>
-				<button tabindex="3" id="print-button" data-bind="click: exportExcel" style="width: 120px;">#{i18n.getText('CAS013_48')}</button>
+				<button class="proceed" tabindex="2" data-bind="">#{i18n.getText('JHC002_A1_1')}</button>
+				<button tabindex="1" data-bind="">#{i18n.getText('JHC002_A1_2')}</button>
 			</div>
 			<div id="contents-area">
-				<div class="container cf">
-					<div class="valign-center control-group">
-						<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CAS013_7')}</div>
-						<div id="combo-box" tabindex="4"
-							data-bind="ntsComboBox: {
-							options: listRoleType,
-							optionsValue: 'value',
-							value: selectedRoleType,
-							optionsText: 'nameId',
-							columns: [
-								{ prop: 'description', length: 10 }
-							]}"></div>
-					</div>
-					<span class="caret-bottom outline"></span>
-					<div class="cf">
-						<div class="pull-left">
-							<div class="valign-center control-group">
-								<span class="text-left">#{i18n.getText('CAS013_9')}</span>
+				<div id="main-area">
+					<div id="main-center-area">
+						<div class="container cf">
+							<div style="height: 150px;">
+								<assy-com params="screenMode: screenMode, masterId: masterId, 
+								histList: histList, selectedHistId: selectedHistId,
+							 	servicePath: { get: pathGet, add: pathAdd, update: pathUpdate, delete: pathDelete },
+							 	getQueryResult: getQueryResult,
+							 	webAppId: 'hr',
+							 	getSelectedStartDate: getSelectedStartDate,
+							 	commandAdd: commandAdd,
+							 	commandUpdate: commandUpdate,
+							 	commandDelete: commandDelete,
+							 	delVisible: delVisible,
+							 	delChecked: delChecked,
+							 	afterRender: afterRender,
+							 	afterAdd: afterAdd,
+							 	afterUpdate: afterUpdate,
+							 	afterDelete: afterDelete"
+							 	
+							 	></assy-com>
 							</div>
-							<table tabindex="5" id="role-list"
-								data-bind="ntsGridList: {								
-									rows: 8,
-									dataSource: listRole,
-									primaryKey: 'roleId',
-									columns: columns,
-									value: selectedRole
-							}"></table>
-						</div>
-						<div class="pull-left">
-							<span class="caret-right outline"></span>
-						</div>
-						<div class="pull-left">
-							<div class="valign-center control-group">
-								<span class="text-left">#{i18n.getText('CAS013_13')}</span>
-							</div>
-							<table tabindex="6" id="roleindi-list"
-								data-bind="ntsGridList: {								
-									rows: 8,
-									dataSource: listRoleIndividual,
-									primaryKey: 'userId',
-									columns: columnsIndividual,
-									value: selectedRoleIndividual
-							}"></table>
-						</div>
-						<div class="pull-left">
-							<div class="control-group button">
-								<button tabindex="7" class="x-large"
-									data-bind="click: openBModal, enable: isCreateMode">#{i18n.getText('CAS013_18')}</button>
-								<div data-bind="text: userName" class="ntsControl limited-label"></div>
-							</div>
-
-							<div class="control-group">
-								<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CAS013_20')}</div>
-								<div id="daterangepicker" tabindex="8"
-									data-bind="ntsDateRangePicker: 
-								{ required: true, 
-								enable: true, 
-								showNextPrevious: true, 
-								value: dateValue, 
-								maxRange: 'none'} 
-							"
-									class="ntsControl" />
+							<div data-bind="ntsFormLabel: {}">#{i18n.getText('JHC002_A222_9')}</div>
+							<div class="contentTable">
+								<div class="nts-fixed-body-container ui-iggrid">
+									<table class="rightTable">
+										<colgroup>
+											<col width="100px" />
+										</colgroup>
+										<thead>
+											<tr>
+												<th class="ui-widget-header" colspan="1">first column</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td><span data-bind="">Thanh1</span>
+													<button class="small">Small</button></td>
+											</tr>
+											<tr>
+												<td><span data-bind="">Thanh2</span>
+													<button class="small">Small</button></td>
+											</tr>
+											<tr>
+												<td><span data-bind="">Thanh3</span>
+													<button class="small">Small</button></td>
+											</tr>
+											<tr>
+												<td><span data-bind="">Thanh4</span>
+													<button class="small">Small</button></td>
+											</tr>
+											<tr>
+												<td><span data-bind="">Thanh5</span>
+													<button class="small">Small</button></td>
+											</tr>
+											<tr>
+												<td><span data-bind="">Thanh6</span>
+													<button class="small">Small</button></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<div class="table">
+									<table id="fixed-table">
+										<colgroup>
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+											<col width="165px" />
+										</colgroup>
+										<thead>
+											<tr>
+												<th class="ui-widget-header lever1" colspan="1">lever1</th>
+												<th class="ui-widget-header lever2" colspan="1">lever2</th>
+												<th class="ui-widget-header lever3" colspan="1">lever3</th>
+												<th class="ui-widget-header lever4" colspan="1">lever4</th>
+												<th class="ui-widget-header lever5" colspan="1">lever5</th>
+												<th class="ui-widget-header lever6" colspan="1">lever6</th>
+												<th class="ui-widget-header lever7" colspan="1">lever7</th>
+												<th class="ui-widget-header lever8" colspan="1">lever8</th>
+												<th class="ui-widget-header lever9" colspan="1">lever9</th>
+												<th class="ui-widget-header lever10" colspan="1">lever10</th>
+											</tr>
+										</thead>
+										<tbody data-bind="foreach: itemList">
+											<tr>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val1,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val2,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val3,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val4,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val5,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val6,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val7,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val8,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val9,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+												<td><div id="combo-box"
+														data-bind="ntsComboBox: {
+														options: comBoList,
+														optionsValue: 'code',
+														visibleItemsCount: 5,
+														value: val10,
+														optionsText: 'name',
+														width: 160,
+														columns: [ { prop: 'name', length: 4 },]}">
+													</div></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
 							</div>
 						</div>
 					</div>
