CCG008: fix bug 107814

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/008/a/ccg008.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/008/a/ccg008.a.style.css
@@ -21,7 +21,7 @@
 
 .placement-wraper {
 	position: relative;
-	height: 470px;
+	height: calc(100vh - 190px);
 	overflow: auto;
 }
 /* Override base */
