--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/index.xhtml
@@ -55,13 +55,13 @@
 										</colgroup>
 										<thead>
 											<tr>
-												<th class="ui-widget-header" colspan="1">first column</th>
+												<th class="ui-widget-header" colspan="1">#{i18n.getText('JHC002_A222_5')}</th>
 											</tr>
 										</thead>
 										<tbody data-bind="foreach: careerType">
 											<tr>
 												<td><span data-bind="text: name"></span>
-													<button class="small">Small</button></td>
+													<button class="small" data-bind="click: $parent.openDialogB">#{i18n.getText('JHC002_A222_10')}</button></td>
 											</tr>
 										</tbody>
 									</table>
@@ -103,34 +103,34 @@
 										<thead>
 											<tr>
 												<com:ko-if bind="maxClassLevel() &gt; 0">
-													<th class="ui-widget-header lever1" colspan="1">lever1</th>
+													<th class="ui-widget-header lever1" colspan="1">#{i18n.getText('JHC002_A222_7')} 1</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 1">
-													<th class="ui-widget-header lever2" colspan="1">lever2</th>
+													<th class="ui-widget-header lever2" colspan="1">#{i18n.getText('JHC002_A222_7')} 2</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 2">
-													<th class="ui-widget-header lever3" colspan="1">lever3</th>
+													<th class="ui-widget-header lever3" colspan="1">#{i18n.getText('JHC002_A222_7')} 3</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 3">
-													<th class="ui-widget-header lever4" colspan="1">lever4</th>
+													<th class="ui-widget-header lever4" colspan="1">#{i18n.getText('JHC002_A222_7')} 4</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 4">
-													<th class="ui-widget-header lever5" colspan="1">lever5</th>
+													<th class="ui-widget-header lever5" colspan="1">#{i18n.getText('JHC002_A222_7')} 5</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 5">
-													<th class="ui-widget-header lever6" colspan="1">lever6</th>
+													<th class="ui-widget-header lever6" colspan="1">#{i18n.getText('JHC002_A222_7')} 6</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 6">
-													<th class="ui-widget-header lever7" colspan="1">lever7</th>
+													<th class="ui-widget-header lever7" colspan="1">#{i18n.getText('JHC002_A222_7')} 7</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 7">
-													<th class="ui-widget-header lever8" colspan="1">lever8</th>
+													<th class="ui-widget-header lever8" colspan="1">#{i18n.getText('JHC002_A222_7')} 8</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 8">
-													<th class="ui-widget-header lever9" colspan="1">lever9</th>
+													<th class="ui-widget-header lever9" colspan="1">#{i18n.getText('JHC002_A222_7')} 9</th>
 												</com:ko-if>
 												<com:ko-if bind="maxClassLevel() &gt; 9">
-													<th class="ui-widget-header lever10" colspan="1">lever10</th>
+													<th class="ui-widget-header lever10" colspan="1">#{i18n.getText('JHC002_A222_7')} 10</th>
 												</com:ko-if>
 											</tr>
 										</thead>
