--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/jhc002.a.style.css
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/jhc002.a.style.css
@@ -1,4 +1,4 @@
-.container.cf{padding-left: 140px;}
+.container.cf{margin: 0 auto;}
 .rightTable tr td{width: 160px; height: 36px;}
 .contentTable{display: flex; margin-top: 20px;}
 .rightTable tr td span{float: left; margin: 4px;}
