add sample of fixed table

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -25,6 +25,7 @@
 @import './lumen/dropdown.scss';
 @import './lumen/floatbtn.scss';
 @import './lumen/picker.scss';
+@import './lumen/fx-table.scss';
 
 @import './lumen/transition.scss';
 @import './lumen/time-range-search-box.scss';
