JHC002 ThanhPV Add C screen

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/index.xhtml
@@ -20,7 +20,7 @@
 
 		<ui:define name="content">
 			<div id="functions-area">
-				<button class="proceed" tabindex="2" data-bind="">#{i18n.getText('JHC002_A1_1')}</button>
+				<button class="proceed" tabindex="2" data-bind="click: save, enable: selectedHistId() != '' ">#{i18n.getText('JHC002_A1_1')}</button>
 				<button tabindex="1" data-bind="">#{i18n.getText('JHC002_A1_2')}</button>
 			</div>
 			<div id="contents-area">
