JHC002 ThanhPv add get data for screen B

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/a/index.xhtml
@@ -140,13 +140,13 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val1,
+														value: l1,
 														optionsText: 'name',
 														width: 160,
-														selectFirstIfNull: 'false',
-														dropDownAttachedToBody: 'true',
+														selectFirstIfNull: false,
+														dropDownAttachedToBody: true,
 														columns: [ { prop: 'name', length: 4 },]}">
 														</div></td>
 												</com:ko-if>
@@ -154,9 +154,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val2,
+														value: l2,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -166,9 +166,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val3,
+														value: l3,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -178,9 +178,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val4,
+														value: l4,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -190,9 +190,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val5,
+														value: l5,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -202,9 +202,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val6,
+														value: l6,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -214,9 +214,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val7,
+														value: l7,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -226,9 +226,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val8,
+														value: l8,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -238,9 +238,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val9,
+														value: l9,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
@@ -250,9 +250,9 @@
 													<td><div id="combo-box"
 															data-bind="ntsComboBox: {
 														options: $parent.careerClass,
-														optionsValue: 'code',
+														optionsValue: 'id',
 														visibleItemsCount: 5,
-														value: val10,
+														value: l10,
 														optionsText: 'name',
 														width: 160,
 														columns: [ { prop: 'name', length: 4 },]}">
