fix bug #107815 ver1

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/index.xhtml
@@ -22,8 +22,8 @@
 
 		<ui:define name="content">
 			<div id="functions-area">
-				<button id="" tabindex="1" data-bind = "click : exportFile" >#{i18n.getText('CPS003_98')}</button>
-				<button id="" tabindex="2" data-bind = "click : close" >#{i18n.getText('CPS003_99')} </button>
+				<button id="G1_001" tabindex="1" data-bind = "click : exportFile" >#{i18n.getText('CPS003_98')}</button>
+				<button id="G1_002" tabindex="2" data-bind = "click : close" >#{i18n.getText('CPS003_99')} </button>
 			</div>
 			<div id="contents-area" data-bind="">
 			<div id= "contents-grid" data-bind="">
